--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4226,32 +4226,54 @@ a.nav-item.is-tab.is-active {
   }
 }
 
-.panel-icon {
-  display: inline-block;
-  font-size: 14px;
-  height: 16px;
-  line-height: 16px;
-  text-align: center;
-  vertical-align: top;
-  width: 16px;
-  color: #7a7a7a;
-  float: left;
-  margin: 0 4px 0 -2px;
+.panel {
+  font-size: 1rem;
 }
 
-.panel-icon .fa {
-  font-size: inherit;
-  line-height: inherit;
+.panel:not(:last-child) {
+  margin-bottom: 1.5rem;
+}
+
+.panel-heading,
+.panel-tabs,
+.panel-block {
+  border-bottom: 1px solid #dbdbdb;
+  border-left: 1px solid #dbdbdb;
+  border-right: 1px solid #dbdbdb;
+}
+
+.panel-heading:first-child,
+.panel-tabs:first-child,
+.panel-block:first-child {
+  border-top: 1px solid #dbdbdb;
 }
 
 .panel-heading {
   background-color: whitesmoke;
-  border-bottom: 1px solid #dbdbdb;
-  border-radius: 4px 4px 0 0;
+  border-radius: 3px 3px 0 0;
   color: #363636;
-  font-size: 1.25rem;
+  font-size: 1.25em;
   font-weight: 300;
-  padding: 10px;
+  line-height: 1.25;
+  padding: 0.5em 0.75em;
+}
+
+.panel-tabs {
+  align-items: flex-end;
+  display: flex;
+  font-size: 0.875em;
+  justify-content: center;
+}
+
+.panel-tabs a {
+  border-bottom: 1px solid #dbdbdb;
+  margin-bottom: -1px;
+  padding: 0.5em;
+}
+
+.panel-tabs a.is-active {
+  border-bottom-color: #4a4a4a;
+  color: #363636;
 }
 
 .panel-list a {
@@ -4262,50 +4284,58 @@ a.nav-item.is-tab.is-active {
   color: #00d1b2;
 }
 
-.panel-tabs {
-  display: flex;
-  font-size: 0.75rem;
-  padding: 5px 10px 0;
-  justify-content: center;
-}
-
-.panel-tabs a {
-  border-bottom: 1px solid #dbdbdb;
-  margin-bottom: -1px;
-  padding: 5px;
-}
-
-.panel-tabs a.is-active {
-  border-bottom-color: #4a4a4a;
-  color: #363636;
-}
-
-.panel-tabs:not(:last-child) {
-  border-bottom: 1px solid #dbdbdb;
-}
-
 .panel-block {
+  align-items: center;
   color: #363636;
-  display: block;
-  line-height: 16px;
-  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  padding: 0.5em 0.75em;
 }
 
-.panel-block:not(:last-child) {
-  border-bottom: 1px solid #dbdbdb;
+.panel-block input[type="checkbox"] {
+  margin-right: 0.75em;
 }
 
-a.panel-block:hover {
+.panel-block > .control {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
+}
+
+.panel-block.is-active {
+  border-left-color: #00d1b2;
+  color: #363636;
+}
+
+.panel-block.is-active .panel-icon {
+  color: #00d1b2;
+}
+
+a.panel-block,
+label.panel-block {
+  cursor: pointer;
+}
+
+a.panel-block:hover,
+label.panel-block:hover {
   background-color: whitesmoke;
 }
 
-.panel {
-  border: 1px solid #dbdbdb;
-  border-radius: 5px;
+.panel-icon {
+  display: inline-block;
+  font-size: 14px;
+  height: 1em;
+  line-height: 1em;
+  text-align: center;
+  vertical-align: top;
+  width: 1em;
+  color: #7a7a7a;
+  margin-right: 0.75em;
 }
 
-.panel:not(:last-child) {
-  margin-bottom: 20px;
+.panel-icon .fa {
+  font-size: inherit;
+  line-height: inherit;
 }
 
 .tabs {
