--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2385,6 +2385,15 @@ a.box:active {
   margin-bottom: 1.5rem;
 }
 
+.notification code,
+.notification pre {
+  background: white;
+}
+
+.notification pre code {
+  background: transparent;
+}
+
 .notification .delete {
   position: absolute;
   right: 0.5em;
@@ -3628,6 +3637,15 @@ a.box:active {
   color: inherit;
 }
 
+.message-body code,
+.message-body pre {
+  background: white;
+}
+
+.message-body pre code {
+  background: transparent;
+}
+
 .modal-background {
   bottom: 0;
   left: 0;
@@ -4496,7 +4514,7 @@ label.panel-block:hover {
   flex-basis: 0;
   flex-grow: 1;
   flex-shrink: 1;
-  padding: 10px;
+  padding: 0.75rem;
 }
 
 .columns.is-mobile > .column.is-narrow {
@@ -5178,17 +5196,17 @@ label.panel-block:hover {
 }
 
 .columns {
-  margin-left: -10px;
-  margin-right: -10px;
-  margin-top: -10px;
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+  margin-top: -0.75rem;
 }
 
 .columns:last-child {
-  margin-bottom: -10px;
+  margin-bottom: -0.75rem;
 }
 
 .columns:not(:last-child) {
-  margin-bottom: 10px;
+  margin-bottom: 0.75rem;
 }
 
 .columns.is-centered {
@@ -5206,7 +5224,7 @@ label.panel-block:hover {
 }
 
 .columns.is-gapless:not(:last-child) {
-  margin-bottom: 20px;
+  margin-bottom: 1.5rem;
 }
 
 .columns.is-gapless > .column {
@@ -5220,7 +5238,7 @@ label.panel-block:hover {
   }
   .columns.is-grid > .column {
     max-width: 33.3333%;
-    padding: 10px;
+    padding: 0.75rem;
     width: 33.3333%;
   }
   .columns.is-grid > .column + .column {
@@ -5262,17 +5280,17 @@ label.panel-block:hover {
 }
 
 .tile.is-ancestor {
-  margin-left: -10px;
-  margin-right: -10px;
-  margin-top: -10px;
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+  margin-top: -0.75rem;
 }
 
 .tile.is-ancestor:last-child {
-  margin-bottom: -10px;
+  margin-bottom: -0.75rem;
 }
 
 .tile.is-ancestor:not(:last-child) {
-  margin-bottom: 10px;
+  margin-bottom: 0.75rem;
 }
 
 .tile.is-child {
@@ -5280,7 +5298,7 @@ label.panel-block:hover {
 }
 
 .tile.is-parent {
-  padding: 10px;
+  padding: 0.75rem;
 }
 
 .tile.is-vertical {
@@ -5288,7 +5306,7 @@ label.panel-block:hover {
 }
 
 .tile.is-vertical > .tile.is-child:not(:last-child) {
-  margin-bottom: 20px !important;
+  margin-bottom: 1.5rem !important;
 }
 
 @media screen and (min-width: 769px) {
