is-circle to make square images circles

--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -34,3 +34,7 @@ $dimensions: 16 24 32 48 64 96 128
     &.is-#{$dimension}x#{$dimension}
       height: $dimension * 1px
       width: $dimension * 1px
+  // Circle
+  @each $width in $image-widths
+    .is-#{$width}x#{$width}.is-circle img
+      border-radius: #{$width}px !important
