make code similar to the rest of image.sass

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -2052,6 +2052,34 @@ a.box:active {
   width: 128px;
 }
 
+.image.is-16x16.is-circle img {
+  border-radius: 16px;
+}
+
+.image.is-24x24.is-circle img {
+  border-radius: 24px;
+}
+
+.image.is-32x32.is-circle img {
+  border-radius: 32px;
+}
+
+.image.is-48x48.is-circle img {
+  border-radius: 48px;
+}
+
+.image.is-64x64.is-circle img {
+  border-radius: 64px;
+}
+
+.image.is-96x96.is-circle img {
+  border-radius: 96px;
+}
+
+.image.is-128x128.is-circle img {
+  border-radius: 128px;
+}
+
 .notification {
   background-color: whitesmoke;
   border-radius: 3px;
@@ -3245,7 +3273,6 @@ a.box:active {
 .level {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -3759,7 +3786,6 @@ a.box:active {
   top: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
   display: none;
   -webkit-box-pack: center;
@@ -5396,7 +5422,6 @@ a.panel-block:hover {
 .columns.is-vcentered {
   -webkit-box-align: center;
       -ms-flex-align: center;
-              -ms-grid-row-align: center;
           align-items: center;
 }
 
@@ -5419,7 +5444,6 @@ a.panel-block:hover {
 .tile {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
-              -ms-grid-row-align: stretch;
           align-items: stretch;
   display: block;
   -ms-flex-preferred-size: auto;
