--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -35,6 +35,6 @@ $dimensions: 16 24 32 48 64 96 128
       height: $dimension * 1px
       width: $dimension * 1px
   // Circle
-  @each $width in $image-widths
-    .is-#{$width}x#{$width}.is-circle img
-      border-radius: #{$width}px !important
+  @each $dimension in $dimensions
+    &.is-#{$dimension}x#{$dimension}.is-circle img
+      border-radius: $dimension * 1px
