simpler solution 50% instead of px

--- a/sass/elements/image.sass
+++ b/sass/elements/image.sass
@@ -7,6 +7,9 @@ $dimensions: 16 24 32 48 64 96 128
     display: block
     height: auto
     width: 100%
+  // circle
+  &.is-circle img
+    border-radius: 50%
   // Ratio
   &.is-square,
   &.is-1by1,
@@ -34,7 +37,3 @@ $dimensions: 16 24 32 48 64 96 128
     &.is-#{$dimension}x#{$dimension}
       height: $dimension * 1px
       width: $dimension * 1px
-  // Circle
-  @each $dimension in $dimensions
-    &.is-#{$dimension}x#{$dimension}.is-circle img
-      border-radius: $dimension * 1px
