--- a/css/bulma.css
+++ b/css/bulma.css
@@ -1987,6 +1987,10 @@ a.box:active {
   width: 100%;
 }
 
+.image.is-circle img {
+  border-radius: 50%;
+}
+
 .image.is-square img, .image.is-1by1 img, .image.is-4by3 img, .image.is-3by2 img, .image.is-16by9 img, .image.is-2by1 img {
   bottom: 0;
   left: 0;
@@ -2050,34 +2054,6 @@ a.box:active {
 .image.is-128x128 {
   height: 128px;
   width: 128px;
-}
-
-.image.is-16x16.is-circle img {
-  border-radius: 16px;
-}
-
-.image.is-24x24.is-circle img {
-  border-radius: 24px;
-}
-
-.image.is-32x32.is-circle img {
-  border-radius: 32px;
-}
-
-.image.is-48x48.is-circle img {
-  border-radius: 48px;
-}
-
-.image.is-64x64.is-circle img {
-  border-radius: 64px;
-}
-
-.image.is-96x96.is-circle img {
-  border-radius: 96px;
-}
-
-.image.is-128x128.is-circle img {
-  border-radius: 128px;
 }
 
 .notification {
