fixes #401 IE10+ double select arrow bug

--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -72,7 +72,7 @@
     padding-right: 36px
     &:hover
       border-color: $control-hover-border
-    &::ms-expand
+    &::-ms-expand
       display: none
   &.is-fullwidth
     width: 100%
