Fix button spacing, Add image placeholders

--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -188,11 +188,10 @@ $curve: cubic-bezier(0, 0.71, 0.29, 1)
 #npm
   animation: fadeIn 500ms both
   animation-delay: 1.4s
-  background: none
   margin: -10px 0 20px
   code
     border-radius: $radius
-    color: $link
+    color: $primary
     display: inline-block
     font-size: 16px
     padding: 16px 32px
