Fix delete button

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2175,6 +2175,11 @@ a.box:active {
   justify-content: flex-start;
 }
 
+.control.is-grouped > .control {
+  flex-basis: 0;
+  flex-shrink: 0;
+}
+
 .control.is-grouped > .control:not(:last-child) {
   margin-bottom: 0;
   margin-right: 0.75rem;
@@ -2829,13 +2834,13 @@ a.box:active {
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
-  height: 1.5em;
+  height: 20px;
   outline: none;
   position: relative;
   transform: rotate(45deg);
   transform-origin: center center;
   vertical-align: top;
-  width: 1.5em;
+  width: 20px;
 }
 
 .delete:before, .delete:after {
@@ -2867,15 +2872,18 @@ a.box:active {
 }
 
 .delete.is-small {
-  font-size: 0.75rem;
+  height: 14px;
+  width: 14px;
 }
 
 .delete.is-medium {
-  font-size: 1.25rem;
+  height: 26px;
+  width: 26px;
 }
 
 .delete.is-large {
-  font-size: 1.5rem;
+  height: 30px;
+  width: 30px;
 }
 
 .fa {
@@ -3656,13 +3664,13 @@ a.box:active {
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
-  height: 1.5em;
+  height: 20px;
   outline: none;
   position: relative;
   transform: rotate(45deg);
   transform-origin: center center;
   vertical-align: top;
-  width: 1.5em;
+  width: 20px;
   background: none;
   height: 40px;
   position: fixed;
@@ -3700,15 +3708,18 @@ a.box:active {
 }
 
 .modal-close.is-small {
-  font-size: 0.75rem;
+  height: 14px;
+  width: 14px;
 }
 
 .modal-close.is-medium {
-  font-size: 1.25rem;
+  height: 26px;
+  width: 26px;
 }
 
 .modal-close.is-large {
-  font-size: 1.5rem;
+  height: 30px;
+  width: 30px;
 }
 
 .modal-card {
